# steerai_mpc_controller_simulation

./: Dockerfile  README.md
gem_simulator/gem_description/: CMakeLists.txt  package.xml
gem_simulator/gem_description/config_rviz/: gem_gazebo_rviz.rviz
gem_simulator/gem_description/urdf/: gem.gazebo  gem.urdf.xacro
gem_simulator/gem_gazebo/: CMakeLists.txt  package.xml
gem_simulator/gem_gazebo/launch/: gem_gazebo_rviz.launch  gem_gazebo_rviz.launch.py
gem_simulator/gem_gazebo/scripts/: gem_ackermann_to_twist.py  gem_sensor_info.py  simple_teleop.py
gem_simulator/gem_gazebo/worlds/: simple_track_green.world
polaris_gem_simulator/gem_simulator/gem_description/config_rviz/: gem_gazebo_rviz.rviz
polaris_gem_simulator/gem_simulator/gem_description/urdf/: gem.urdf.xacro
polaris_gem_simulator/gem_simulator/gem_gazebo/launch/: gem_gazebo_rviz.launch
steerai_data_collector/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
steerai_data_collector/data/: reference_path.csv  training_data.csv  training_data_20251130-221116.csv  training_data_20251202-150014.csv  training_data_20251215-123916.csv
steerai_data_collector/scripts/: data_collector.py
steerai_data_collector/steerai_data_collector/: data_collector.py
steerai_localization/: CMakeLists.txt  package.xml
steerai_localization/config/: ekf_local.yaml  ekf_params.yaml
steerai_localization/launch/: sensor_fusion.launch
steerai_mpc/: CMakeLists.txt  README.md  mpc_diagram.html  package.xml  setup.cfg  setup.py
steerai_mpc/cfg/: MPCDynamicParams.cfg
steerai_mpc/config/: ekf_params.yaml  mpc_params.yaml  path_params.yaml
steerai_mpc/launch/: mpc_controller.launch  mpc_controller_launch.py  sensor_fusion.launch
steerai_mpc/paths/: reference_path.csv  reference_path_generated.csv  reference_path_modified.csv  reference_path_sim.csv  steerai_path.csv
steerai_mpc/scripts/: acados_mpc_solver.py  generate_modified_path.py  mpc_controller.py  mpc_solver.py  path_generator.py  path_manager.py  path_publisher.py  tf_broadcaster.py  vehicle_model.py
steerai_mpc/steerai_mpc/: mpc_controller.py  mpc_solver.py  path_generator.py  path_manager.py  path_publisher.py  tf_broadcaster.py  vehicle_model.py
steerai_sysid/: CMakeLists.txt  README.md  dynamics_model.onnx  dynamics_model.pth  package.xml  scaler_X.pkl  scaler_y.pkl  setup.cfg  setup.py
steerai_sysid/scripts/: train_dynamics.py
steerai_sysid/steerai_sysid/: train_dynamics.py
