<?xml version="1.0"?>
<package format="2">
  <name>steerai_localization</name>
  <version>0.0.1</version>
  <description>The steerai_localization package for dual EKF sensor fusion.</description>

  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>robot_localization</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>robot_localization</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>robot_localization</exec_depend>

</package>
